[package]
name = "isotonic-credit-agency"
version = { workspace = true }
authors = ["Tomasz Kurcz <tom@confio.gmbh>"]
edition = { workspace = true }
description = "Isotonic Credit Agency smart contract"
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = {workspace = true}
isotonic-market = { workspace = true }
wyndex-oracle = { workspace = true }
wyndex-multi-hop = { workspace = true }
wyndex-pair-lsd = { workspace = true }
wyndex-stake = { workspace = true }
isotonic-token = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
utils = { workspace = true }
either = "1.6"

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
wyndex = { workspace = true }
wyndex-tests = { workspace = true }